# mixxx

./: meson.build  meson_options.txt  subprojects
lib/: meson.build
lib/portaudio/: meson.build
lib/qtscript-bytearray/: meson.build
lib/reverb/: meson.build
src/: meson.build
src/analyzer/: meson.build
src/analyzer/plugins/: meson.build
src/broadcast/: meson.build
src/control/: meson.build
src/controllers/: dlgcontrollerlearning.h  dlgprefcontroller.h  dlgprefcontrollers.h  meson.build
src/controllers/bulk/: meson.build
src/controllers/delegates/: meson.build
src/controllers/hid/: meson.build  meson.build.bak
src/controllers/keyboard/: meson.build
src/controllers/midi/: meson.build
src/database/: meson.build
src/dialog/: dlgabout.h  dlgdevelopertools.h  meson.build
src/effects/: meson.build
src/effects/builtin/: meson.build
src/effects/lv2/: meson.build
src/encoder/: meson.build
src/engine/: meson.build
src/engine/bufferscalers/: meson.build
src/engine/cachingreader/: meson.build
src/engine/channels/: meson.build
src/engine/controls/: meson.build
src/engine/effects/: meson.build
src/engine/filters/: meson.build
src/engine/sidechain/: meson.build
src/engine/sync/: meson.build
src/mixer/: meson.build
src/musicbrainz/: meson.build
src/preferences/: meson.build
src/preferences/dialog/: dlgprefautodj.h  dlgprefbeats.h  dlgprefbroadcast.h  dlgprefcrossfader.h  dlgprefdeck.h  dlgprefeffects.h  dlgprefeq.h  dlgpreferences.h  dlgprefinterface.h  dlgprefkey.h  dlgpreflibrary.h  dlgpreflv2.h  dlgprefmodplug.cpp  dlgprefnovinyl.h  dlgprefrecord.h  dlgprefreplaygain.h  dlgprefsound.h  dlgprefsounditem.h  dlgprefvinyl.h  dlgprefwaveform.h  meson.build
src/proto/: meson.build
src/recording/: meson.build
src/skin/: meson.build
src/soundio/: meson.build
src/sources/: meson.build
src/sources/v1/: meson.build
src/test/: meson.build
src/test/co_dumps/: meson.build
src/track/: meson.build
src/util/: meson.build  version.cpp
src/util/battery/: meson.build
src/util/color/: meson.build
src/util/db/: meson.build
src/vinylcontrol/: meson.build
src/waveform/: meson.build
src/waveform/renderers/: meson.build
src/waveform/widgets/: meson.build
src/widget/: meson.build
subprojects/: lame.wrap  ogg.wrap  vorbis.wrap
subprojects/fidlib/: meson.build
subprojects/qm-dsp/: meson.build
subprojects/replaygain/: meson.build
subprojects/soundtouch/: meson.build
